# shadowforge

./: .gitignore  Anchor.toml  README.md  new-program-keypair.json  package.json
app/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
app/src/components/: ComplianceToggle.tsx  Header.tsx  HeroSection.tsx  LoadingSpinner.tsx  MevShieldSimulator.tsx  PrivateBridgeForm.tsx  PrivateDepositForm.tsx  PrivateIntentRouter.tsx  PrivateLendForm.tsx  PrivateSwapForm.tsx  PrivateWithdrawForm.tsx  UserShieldedPosition.tsx  VaultPrivacyStats.tsx
app/src/lib/: anchor.ts  intentParser.ts  sdkIntegrations.ts  utils.ts
programs/shadowforge/: Cargo.toml
programs/shadowforge/src/: error.rs  lib.rs  state.rs
programs/shadowforge/src/instructions/: accrue_view.rs  admin_mock_yield.rs  apply_compliance.rs  initialize.rs  mod.rs  private_bridge.rs  private_deposit.rs  private_lend.rs  private_swap.rs  private_withdraw.rs  wrap_sol.rs
scripts/: deploy.ts  deployment-devnet.json
tests/: shadowforge.ts
